--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -30,7 +31,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
-    "react-intersection-observer": "^9.5.2",
+    "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.16.0",
     "solidjs-dropzone": "^1.0.0",
     "tailwind-merge": "^1.14.0",
